# Trip-Wizard

./: .dockerignore  .env  .gitignore  .gitleaks.toml  .gitmodules  README.md  firebase.json  firestore.indexes.json  firestore.rules  pubspec.yaml  test-results.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-web.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
android/app/: build.gradle.kts  proguard-rules.pro
backend/: Dockerfile  README.md  environment.yml  pyproject.toml
backend/src/trip_wizards/: firebase_config.py  main.py  stripe_billing.py
backend/tests/: test_health.py  test_main.py
backend/tests/fixtures/: README.md  __init__.py  adk_mock_responses.py  sample_data.py
docs/: IMPLEMENTATION_SUMMARY.md  accessibility-audit.md  api-migration-summary.md  firestore-dev-rules.md  flutter_bootstrap.js  flutter_service_worker.js  free-api-setup.md  google-maps-setup.md  index.html  itinerary-enhancement-summary.md  main.dart.js  manifest.json  qa-checklist.md  qa-progress.md  t033-performance-plan.md  t033-performance-report.md  t034-beta-release-plan.md  ui-enhancement-summary.md  version.json
docs/assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
docs/runbooks/: README.md  adk-submodule-updates.md  (+1 more)
l10n/: app_en.arb
lib/: firebase_options.dart  firebase_options.dart.template  main.dart
scripts/: manage_credentials.sh
test/: widget_test.dart
tools/: README.md  build-memory-monitor.sh  dev-memory-helper.sh  ram-disk-manager.sh
web/: index.html  manifest.json
(+104 files in other folders)
